--- a/styles/architect.css
+++ b/styles/architect.css
@@ -3,22 +3,43 @@
 .work-sans-font {
     font-family: "Work Sans", sans-serif;
     font-optical-sizing: auto;
+    font-weight: 400;
     font-style: normal;
 }
 
-* {
+/* * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+} */
+
+.display-flex {
+    display: flex;
 }
 
-.hero-section {
+.text-primary {
+    color: #FF900E;
+}
+
+/* dark 02 */
+.text-gray {
+    color: #424242;
+}
+
+/* dark03 */
+.text-light-gray {
+    color: #727272;
+}
+
+.bg-light {
     background: rgba(255, 144, 14, 0.1);
 }
-.hero-container{
+
+.hero-container {
     max-width: 1280px;
     margin: auto;
 }
+
 .btn-primary {
     border-radius: 10px;
     background: rgb(255, 144, 14);
@@ -36,9 +57,17 @@
     border: 2px solid rgb(255, 144, 14);
 }
 
+main {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+main>section {
+    margin-top: 130px;
+}
+
 /* nav style */
-.nav-bar {
-    display: flex;
+.navbar {
     justify-content: space-between;
     align-items: center;
     padding: 20px 30px;
@@ -52,19 +81,17 @@
 
 .nav-items {
     font-size: 1.2rem;
-    font-weight: 500; 
+    font-weight: 500;
 }
-.nav-links{
-    display: flex;
- 
-}
-.nav-items li{
+
+.nav-items li {
     list-style: none;
     margin-right: 30px;
 }
+
 .nav-items a {
     text-decoration: none;
-    color: rgb(66, 66, 66);
+    color: #424242;
 }
 
 .nav-bar,
@@ -88,7 +115,6 @@
 }
 
 .banner-description {
-    color: rgb(114, 114, 114);
     font-size: 1rem;
     font-weight: 400;
     margin: 20px 0;
@@ -98,10 +124,90 @@
     width: 100%;
 }
 
+/* team and feature related styles */
+.teams {
+    align-items: center;
+    margin: 0 30px;
+}
+
+.team-image-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+
+.our-features {
+    max-width: 537px;
+    margin-left: 130px;
+}
+
+.section-title {
+    font-weight: bold;
+    font-size: 2.5rem;
+}
+
+#quick-list {
+    font-weight: 500;
+}
+
+.teams p {
+    margin: 20px 0;
+}
+
+/* some facts related styles */
+.facts-section{
+    margin: 0 30px;
+}
+.facts-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 0 50px;
+}
+.facts-description{
+    max-width: 540px;
+    margin-bottom: 50px;
+}
+.fact-card {
+    border: 1px solid #FF900E;
+    width: 240px;
+    height: 240px;
+    border-radius: 10px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.fact-number {
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
+.fact-name {
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 10px;
+    color: rgb(114, 114, 114);
+}
 /* responsive media query */
 @media screen and (max-width: 576px) {
-    .nav-bar , 
-    .nav-links{
+
+    .navbar,
+    .nav-links,
+    .teams {
         flex-direction: column;
+    }
+
+    .team-image-container,
+    .facts-container {
+        grid-template-columns: 1fr;
+    }
+    .our-features {
+        margin-left: 20px;
+    }
+    .facts-container{
+        justify-items: center;
+        gap: 24px;
     }
 }
