--- a/styles/architect.css
+++ b/styles/architect.css
@@ -7,6 +7,9 @@
     font-style: normal;
 }
 
+/* .container{
+    padding: 240px 50px;
+} */
 /* * {
     margin: 0;
     padding: 0;
@@ -36,7 +39,7 @@
 }
 
 .hero-container {
-    max-width: 1280px;
+    max-width: 1920px;
     margin: auto;
 }
 
@@ -57,7 +60,8 @@
     border: 2px solid rgb(255, 144, 14);
 }
 
-main {
+main,
+footer {
     max-width: 1440px;
     margin: 0 auto;
 }
@@ -122,12 +126,13 @@ main>section {
 
 .banner-image {
     width: 100%;
+    padding-top: 0;
+    padding-bottom: 45px;
 }
 
 /* team and feature related styles */
 .teams {
     align-items: center;
-    margin: 0 30px;
 }
 
 .team-image-container {
@@ -154,19 +159,74 @@ main>section {
     margin: 20px 0;
 }
 
+/* Features style */
+.features {
+    gap: 140px;
+}
+
+#features-section-title {
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+}
+
+.features-contant {
+    max-width: 600px;
+}
+
+.features-card {
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+    background: white;
+    margin-bottom: 20px;
+}
+
+.features-title,
+.features-card {
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+#experience-badge {
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top: -100px;
+}
+
+#experience-year {
+    font-size: 4rem;
+    font-weight: 700;
+}
+
+.featured-architect {
+    max-width: 700px;
+}
+
+.featured-architect img {
+    width: 100%;
+    /* height: auto; */
+}
+
 /* some facts related styles */
-.facts-section{
+.facts-section {
     margin: 0 30px;
 }
+
 .facts-container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     padding: 0 50px;
 }
-.facts-description{
+
+.facts-description {
     max-width: 540px;
     margin-bottom: 50px;
 }
+
 .fact-card {
     border: 1px solid #FF900E;
     width: 240px;
@@ -190,24 +250,106 @@ main>section {
     margin-top: 10px;
     color: rgb(114, 114, 114);
 }
+
+/* Our Sponspors style */
+.sponsors-info {
+    max-width: 542px;
+    margin: 50px auto;
+    text-align: center;
+}
+
+.sponsors-companies {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    justify-content: space-around;
+    align-items: center;
+}
+
+.sponsors-companies img {
+    filter: grayscale(100%);
+}
+
+/* footer style */
+footer {
+    background: rgb(255, 244, 231);
+    padding: 20px;
+    text-align: center;
+    margin-top: 50px;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    font-size: 0.9rem;
+}
+
 /* responsive media query */
 @media screen and (max-width: 576px) {
 
     .navbar,
     .nav-links,
+    .features,
     .teams {
         flex-direction: column;
     }
 
     .team-image-container,
-    .facts-container {
+    .facts-container,
+    .sponsors-companies {
         grid-template-columns: 1fr;
     }
+
     .our-features {
         margin-left: 20px;
     }
-    .facts-container{
+
+    .facts-container {
         justify-items: center;
         gap: 24px;
+    }
+
+    .sponsors-companies {
+        justify-items: center;
+        gap: 50px;
+    }
+
+    #experience-badge {
+        margin-top: 20px;
+        margin-left: 20px;
+    }
+
+    footer {
+        font-size: 0.7rem;
+        padding: 8px;
+        text-align: center;
+    }
+}
+
+/* medium size device */
+@media screen and (min-width: 576px) and (max-width: 992px) {
+
+    .teams,
+    .features {
+        flex-direction: column;
+    }
+
+    .our-features {
+        margin: 50px auto;
+    }
+
+    .sponsors-companies,
+    .facts-container {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 50px;
+        justify-items: center;
+    }
+
+    #experience-badge {
+        margin-top: 20px;
+        margin-left: 20px;
+    }
+
+    footer {
+        font-size: 0.75rem;
+        padding: 15px;
+        text-align: center;
     }
 }
